--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,15 +26,15 @@
             </div>
             <div class="contact">
                 <h3>Sign Up</h3>
-                <form ref='uploadForm' id='uploadForm'  action='/upload' 
-                    method='post' encType="multipart/form-data">
                     <p>
-                        <input type="file" accept=".csv" id="csvFile" name="csvFile">
+                        <a href="/display-student-data">Display Student Data</a>
                     </p>
                     <p>
-                        <button type="submit" id="submit">Submit</button>
+                        <a href="/upload-student-data">Upload Student Data</a>
                     </p>
-                </form>
+                    <p>
+                        <a href="/obligations">Obligations</a>
+                    </p>
             </div>
         </div>
     </div>
