--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 }
 body{
-	background: #92Bde7;
+	background: 38,38,38;
 	color: #485e74;
 	line-height: 1.6;
 	font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
