--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-        <h1 class="brand"><span>S<span>R</span>SS</span>CSV Entry</h1>
+        <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
         <div class="wrapper animated fadeIn">
             <div class="company-info">
                 <h3>SRSS CSV Entry</h3>
@@ -27,13 +27,16 @@
             <div class="contact">
                 <h3>Sign Up</h3>
                     <p>
+                        <a href="/search-student">New/Edit Ticket Entry</a>
+                    </p>
+                    <p>
                         <a href="/display-student-data">Display Student Data</a>
                     </p>
                     <p>
-                        <a href="/upload-student-data">Upload Student Data</a>
+                        <a href="/upload">Upload Students/Obligations Data</a>
                     </p>
                     <p>
-                        <a href="/obligations">Obligations</a>
+                        <a href="/settings">Settings</a>
                     </p>
             </div>
         </div>
