--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -83,28 +83,29 @@
 </script>
 
 <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">SRSS Prom Sign Up</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/display-student-data">Students</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/search-student">Search</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/settings">Settings</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">SRSS Prom Sign Up</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+         <ul class="navbar-nav">
+            <li class="nav-item active">
+               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="/display-student-data">Students</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="/search-student">Search</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="/settings">Settings</a>
+            </li>
+         </ul>
+      </div>
+   </nav>
    <form action="/ticket-entry">
       <div class="container mt-4">
          <div class="row">
@@ -112,10 +113,12 @@
             </div>
             <div class="col-md-6">
                <div class="card">
-                  <div class="card-body">
+                  <div class="card-header">
                      <div class="card-title">
                         <h5>Search Student</h5>
                      </div>
+                  </div>
+                  <div class="card-body">
                      <div class="card-text">
                         <div class="form-group">
                            <label>Student ID</label>
@@ -147,4 +150,5 @@
          </div>
       </div>
    </form>
+
 </html>
