--- a/views/display-student-data.ejs
+++ b/views/display-student-data.ejs
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css"> 
+  <% include partials/head %>
 </head>
+
 <body>
-    <table style="width:100%" class="table">
-        <tr>
-          <th>Student ID</th>
-          <th>First Name</th>
-          <th>Middle Initial</th>
-          <th>Last Name</th>
-          <th>Grade</th>
-        </tr>
-        <% console.log(studentsData) %>
-        <% studentsData.forEach(dt=>{ %>
-            <tr>
-                <td><%= dt.ID %></td>
-                <td><%= dt.FIRST %></td> 
-                <td><%= dt.MI %></td>
-                <td><%= dt.LAST %></td>
-                <td><%= dt.GR %></td>
-              </tr>
-        <% }) %>
-      </table>
+  <% include partials/header %>
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <div class="card-title">
+          <h5>Students Data</h5>
+        </div>
+      </div>
+      <div class="card-body">
+        <table class="table table-striped">
+          <tr>
+            <th>Student ID</th>
+            <th>First Name</th>
+            <th>Middle Initial</th>
+            <th>Last Name</th>
+            <th>Grade</th>
+          </tr>
+          <% console.log(studentsData) %>
+          <% studentsData.forEach(dt=>{ %>
+          <tr>
+            <td><%= dt.ID %></td>
+            <td><%= dt.FIRST %></td>
+            <td><%= dt.MI %></td>
+            <td><%= dt.LAST %></td>
+            <td><%= dt.GR %></td>
+          </tr>
+          <% }) %>
+        </table>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
