--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,69 +2,77 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Client Project Sign Up</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
-    <link rel="stylesheet" href="css/style.css">
+  <% include partials/head %>
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">SRSS Prom Sign Up</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/display-student-data">Students</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/search-student">Search</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/settings">Settings</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-    <div class="container">
-        <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
-        <div class="wrapper animated fadeIn">
-            <div class="company-info">
-                <h3>SRSS CSV Entry</h3>
-                <ul>
-                    <li><i class="fa fa-road"></i> 17501 W Willard Rd, Poolesville, MD 20837</li>
-                    <li><i class="fa fa-phone"></i> (240) 740-2400</li>
-                    <li><i class="fa fa-envelope"></i> srss.smcs2021@gmail.com</li>
-                </ul>
+  <% include partials/header %>
+  <div class="container">
+    <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
+    <div class="wrapper animated fadeIn">
+      <div class="company-info">
+        <h3>SRSS CSV Entry</h3>
+        <ul>
+          <li><i class="fa fa-road"></i> 17501 W Willard Rd, Poolesville, MD 20837</li>
+          <li><i class="fa fa-phone"></i> (240) 740-2400</li>
+          <li><i class="fa fa-envelope"></i> srss.smcs2021@gmail.com</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h3>Sign Up</h3>
+        <div class="box">
+          <a href="/search-student">
+            <div class="icon">
+              <i class="fa fa-ticket-alt fa-5x"></i>
             </div>
-            <div class="contact">
-                <h3>Sign Up</h3>
-                    <p>
-                        <a href="/search-student">New/Edit Ticket Entry</a>
-                    </p>
-                    <p>
-                        <a href="/display-student-data">Display Student Data</a>
-                    </p>
-                    <p>
-                        <a href="/upload">Upload Students/Obligations Data</a>
-                    </p>
-                    <p>
-                        <a href="/settings">Settings</a>
-                    </p>
+            <div class="icon-text">
+              New/Edit Ticket
             </div>
+          </a>
         </div>
+        <div class="box">
+          <a href="/display-student-data">
+            <div class="icon">
+              <i class="fa fa-users fa-5x"></i>
+            </div>
+            <div class="icon-text">
+              Display Students
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="/upload">
+            <div class="icon">
+              <i class="fa fa-cloud-upload-alt fa-5x"></i>
+            </div>
+            <div class="icon-text">
+              Upload Files
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="/settings">
+            <div class="icon">
+              <i class="fa fa-cog fa-5x"></i>
+            </div>
+            <div class="icon-text">
+              Settings
+            </div>
+          </a>
+        </div>
+
+
+
+
+
+
+
+
+
+
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
