--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -2,10 +2,7 @@
 <html>
 
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Student Event Sign Up</title>
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <% include partials/head %>
 </head>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -83,29 +80,7 @@
 </script>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">SRSS Prom Sign Up</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-         <ul class="navbar-nav">
-            <li class="nav-item active">
-               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="/display-student-data">Students</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="/search-student">Search</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="/settings">Settings</a>
-            </li>
-         </ul>
-      </div>
-   </nav>
+   <% include partials/header %>
    <form action="/ticket-entry">
       <div class="container mt-4">
          <div class="row">
@@ -116,6 +91,9 @@
                   <div class="card-header">
                      <div class="card-title">
                         <h5>Search Student</h5>
+                     </div>
+                     <div class="card-text">
+                        
                      </div>
                   </div>
                   <div class="card-body">
