--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,17 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Client Project Sign Up</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <% include partials/head %>
 </head>
 
 <body>
+    <% include partials/header %>
     <div class="container">
         <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
         <div class="wrapper animated fadeIn">
@@ -26,8 +20,7 @@
             </div>
             <div class="contact">
                 <h3>Sign Up</h3>
-                <form ref='uploadForm' id='uploadForm'  action='/upload' 
-                    method='post' encType="multipart/form-data">
+                <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
                     <div>
                         <div>Choose the type of file you are uploading:</div>
                         <input type="radio" name="collectionName" value="students">Students
