--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -104,7 +104,7 @@
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
                            <button class="float-left btn btn-lg btn-secondary" id="backButton"
-                              onclick=window.history.back();>Back </button>
+                              onclick=window.history.back().back();>Back </button>
                         </div>
                      </div>
                   </div>
