--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -103,8 +103,7 @@
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
-                           <button class="float-left btn btn-lg btn-secondary" id="backButton"
-                              onclick=window.history.back().back();>Back </button>
+                           <a href="index" class="float-left btn btn-lg btn-secondary" id="backButton">Back </a>
                         </div>
                      </div>
                   </div>
