--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -103,7 +103,7 @@
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
-                           <a href="index" class="float-left btn btn-lg btn-secondary" id="backButton">Back </a>
+                           <a href="/index" class="form-control float-left btn btn-lg btn-secondary" id="backButton">Back </a>
                         </div>
                      </div>
                   </div>
