--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -2,14 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Client Project Sign Up</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <% include partials/head %>
 </head>
 
 <body>
@@ -26,6 +19,9 @@
             </div>
             <div class="contact">
                 <div class="<%= styleClass %>"><%= msg %></div>
+                <div class="align-center">
+                    <a href="/index" class="btn btn-secondary">Home</a>
+                </div>
             </div>
         </div>
     </div>
