--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@ body{
 }
 a {
 	text-decoration: none !important;
+	color: #000;
 }
 .container{
 	max-width: 1170px;
@@ -38,7 +39,7 @@ ul{
 	padding: 1em;
 }
 .company-info{
-	background: #c9e6ff;
+	background: rgb(254, 212, 54);
 }
 .company-info h3, .company-info ul{
 	text-align: center;
@@ -65,16 +66,16 @@ ul{
 .contact form button, .contact form input, .contact form textarea{
 	width: 100%;
 	padding: 1em;
-	border: 1px solid #c9e6ff;
+	border: 1px solid rgb(254, 212, 54);
 	font-size: 16px;
 }
 .contact form button{
-	background: #c9e6ff;
+	background: rgb(254, 212, 54);
 	border: 0;
 	text-transform: uppercase;
 }
 .contact form button:hover, .contact form button:focus{
-	background: #92Bde7;
+	background: rgb(254, 212, 54);
 	color: white;
 	outline: 0;
 	transition: background-color 0.8s ease-out;
@@ -95,8 +96,8 @@ ul{
 .box {
 	margin: 10px;
 	padding: 4px;
-	border: solid 1px #aaa;
-	background-color: #ccc;
+	border: solid 1px rgb(217, 182, 58	);
+	background-color: rgb(254, 212, 54);
 	width: 150px;
 	text-align: center;
 	float: left;
