--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -19,7 +19,7 @@
             </div>
             <div class="contact">
                 <div class="<%= styleClass %>"><%= msg %></div>
-                <div class="align-center">
+                <div class="text-center">
                     <a href="/index" class="btn btn-secondary">Home</a>
                 </div>
             </div>
