--- a/views/display-ticket-data.ejs
+++ b/views/display-ticket-data.ejs
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="card-header">
         <div class="card-title">
-          <h5>Students Data</h5>
+          <h5>Tickets</h5>
         </div>
       </div>
       <div class="card-body">
