--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
           <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/display-student-data">Students</a>
+          <a class="nav-link" href="/display-ticket-data">Tickets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/search-student">Search</a>
