--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
           </a>
         </div>
         <div class="box">
-          <a href="/display-student-data">
+          <a href="/display-ticket-data">
             <div class="icon">
               <i class="fa fa-users fa-5x"></i>
             </div>
