--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,9 @@
           <a class="nav-link" href="/search-student">Search</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/upload">Upload</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/settings">Settings</a>
         </li>
       </ul>
