--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -11,7 +11,7 @@
         <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
         <div class="wrapper animated fadeIn">
             <div class="company-info">
-                <h3>SRSS CSV Entry</h3>
+                <h3>SRSS Prom Sign Up</h3>
                 <ul>
                     <li><i class="fa fa-road"></i> 17501 W Willard Rd, Poolesville, MD 20837</li>
                     <li><i class="fa fa-phone"></i> (240) 740-2400</li>
@@ -19,20 +19,20 @@
                 </ul>
             </div>
             <div class="contact">
-                <h3>Sign Up</h3>
+                <h3>Upload Files</h3>
                 <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
-                    <div>
-                        <div>Choose the type of file you are uploading:</div>
-                        <input type="radio" name="collectionName" value="students">Students
-                        <input type="radio" name="collectionName" value="obligations">Obligations
+                    <div class="form-group">
+                        <label>Choose the type of file you are uploading:</label>
+                        <div>
+                            <input type="radio" name="collectionName" value="students"> Students
+                            <input class="ml-4" type="radio" name="collectionName" value="obligations"> Obligations
+                        </div>
                     </div>
-                    <div class="full">
-                        <p>
-                            <input type="file" accept=".csv" id="csvFile" name="csvFile">
-                        </p>
-                        <p>
-                            <button type="submit" id="submit">Submit</button>
-                        </p>
+                    <div class="form-group">
+                        <input type="file" accept=".csv" id="csvFile" name="csvFile">
+                    </div>
+                    <div class="form-group text-center">
+                        <button class="btn btn-lg btn-warning" type="submit" id="submit">Submit</button>
                     </div>
                 </form>
             </div>
